fix: Remove @vercel/static dependency and update config
- Remove @vercel/static from package.json
- Simplify vercel.json build configuration
- Keep only necessary build configurations

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@google/generative-ai": "^0.8.0"
   },
   "devDependencies": {
-    "@vercel/node": "^3.0.0",
-    "@vercel/static": "^2.0.0"
+    "@vercel/node": "^3.0.0"
   },
   "engines": {
     "node": ">=16.0.0"
