fix: 環境変数のデバッグとVercel設定の更新
- 環境変数のデバッグログを追加
- Vercel設定を更新して環境変数を確実に渡すように修正
- 本番環境用のNODE_ENVを設定

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,21 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/chat.js", "use": "@vercel/node" },
+    { 
+      "src": "api/chat.js", 
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": [".env"]
+      }
+    },
     { "src": "*.{js,css,html}", "use": "@vercel/static" }
   ],
   "routes": [
     { "src": "/api/chat", "dest": "/api/chat.js" },
     { "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|ico|svg))", "dest": "/$1" },
     { "src": "/(.*)", "dest": "/index.html" }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
